--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>D&Donald</title>
         {% load static %}
+        <link rel="shortcut icon" type="image/png" href="{% static 'chat/favicon.ico' %}"/>
         <link rel="stylesheet" href="{% static 'chat/style.css' %}"/>
     </head>
     <body>
