Changed title to DonaldDM

--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>D&Donald</title>
+        <title>DonaldDM</title>
         {% load static %}
         <link rel="shortcut icon" type="image/png" href="{% static 'chat/favicon.ico' %}"/>
         <link rel="stylesheet" href="{% static 'chat/style.css' %}"/>
     </head>
     <body>
         <div id="header">
-            <h1>D&Donald</h1>
+            <h1>DonaldDM - Make D&D Great Again</h1>
         </div>
         <div id="content">
             <div id="image-container">
